[package]
name = "food_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rocket = { version = "0.5.0", features = ["handlebars"] }

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]
